--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,6 @@ deployment:
         revision_location:
           revision_type: S3
           s3_location:
-            bucket: glob-bucket-east-1
+            bucket: s3awscirclecidemo
             key_pattern: circleci-demo-app-{BRANCH}-{SHORT_COMMIT}
         deployment_group: circleci-demo-dg
