--- a/circle.yml
+++ b/circle.yml
@@ -1,17 +1,18 @@
 version: 2
-test:
-  override:
-    - php ./test.php
-deployment:
-  staging:
-    branch: master
-    codedeploy:
-      circleci-demo-app:
-        application_root: /
-        region: us-east-1
-        revision_location:
-          revision_type: S3
-          s3_location:
-            bucket: s3awscirclecidemo
-            key_pattern: circleci-demo-app-{SHORT_COMMIT}-{BUILD_NUM}
-        deployment_group: staging-instances
+jobs:
+  test:
+    override:
+      - php ./test.php
+  deployment:
+    staging:
+      branch: master
+      codedeploy:
+        circleci-demo-app:
+          application_root: /
+          region: us-east-1
+          revision_location:
+            revision_type: S3
+            s3_location:
+              bucket: s3awscirclecidemo
+              key_pattern: circleci-demo-app-{SHORT_COMMIT}-{BUILD_NUM}
+          deployment_group: staging-instances
