code-deploy error

--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
 version: 2
 jobs:
-  test:
-    override:
-      - php ./test.php
+  #test:
+    #override:
+      #- php ./test.php
   deployment:
     staging:
       branch: master
@@ -20,5 +20,5 @@ workflows:
   version: 2
   workflow:
     jobs:
-      - test
+      #- test
       - deployment
