--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,5 @@
-version: 2
-jobs:
+  version: 2
+#jobs:
   #test:
     #override:
       #- php ./test.php
@@ -16,9 +16,10 @@ jobs:
               bucket: s3awscirclecidemo
               key_pattern: circleci-demo-app-{SHORT_COMMIT}-{BUILD_NUM}
           deployment_group: staging-instances
-workflows:
-  version: 2
-  workflow:
-    jobs:
+#workflows:
+  #version: 2
+  #workflow:
+    #jobs:
       #- test
-      - deployment
+      #- deployment
+
