--- a/circle.yml
+++ b/circle.yml
@@ -3,11 +3,15 @@ jobs:
   #test:
     #override:
       #- php ./test.php
+    #steps:
+      #- run:
+          #name: Show current branch
+          #command: echo ${CIRCLE_BRANCH} 
+  deployment:
     steps:
       - run:
           name: Show current branch
-          command: echo ${CIRCLE_BRANCH} 
-  deployment:
+          command: echo ${CIRCLE_BRANCH}
     staging:
       branch: master
       codedeploy:
