--- a/circle.yml
+++ b/circle.yml
@@ -9,8 +9,9 @@ jobs:
     working_directory: ~/tmp/S3ContinuousDeploy
     steps:
       - checkout
-      - run: 
-          zip -r files.zip S3ContinuousDeploy
+      - run:
+          command: 
+            zip -r files.zip /tmp/S3ContinuousDeploy
       #- run: 
           #sudo apt-get update && sudo apt-get install nginx -y    
       #- run: 
