--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    docker:
+    #docker:
       #- image: circleci/ruby:2.4
       #- image: circleci/redis:4.0
     machine:
@@ -10,12 +10,12 @@ jobs:
     steps:
       - checkout
       - run:
-          command: 
+          command: |
             zip -r artifact.zip ~/tmp/S3ContinuousDeploy
             mkdir /root/project/artifact && cd /root/project/artifact && cp artifact.zip /root/project/artifact
       - store_artifacts:
           path: /root/project/artifact/artifact.zip
-          destination: /root/project/rtifact  
+          destination: /root/project/artifact  
       # - setup_remote_docker:
       #     docker_layer_caching: true
       # - run: docker run -d -p 3000:3000 local:static_rails_app rails s -b 0.0.0.0
