--- a/circle.yml
+++ b/circle.yml
@@ -28,7 +28,7 @@ jobs:
           name: Deploy Over SSH
           command: |
             echo $CIRCLE_BUILD_NUM
-            ssh ubuntu@$SSH_HOST BUILD_NO="$CIRCLE_BUILD_NUM" 
+            ssh ubuntu@54.204.70.36 BUILD_NO="$CIRCLE_BUILD_NUM" 
       #- run: 
           #sudo apt-get update && sudo apt-get install nginx -y    
       #- run: 
