--- a/circle.yml
+++ b/circle.yml
@@ -1,21 +1,21 @@
 version: 2
 jobs:
   build:
-    #docker:
-      #- image: circleci/ruby:2.4
+    docker:
+      - image: circleci/ruby:2.4
       #- image: circleci/redis:4.0
-    machine:
-      enabled: true
+    #machine:
+      #enabled: true
     working_directory: /home/circleci/S3ContinuousDeploy
     steps:
       - checkout
       - run:
           command: |
             zip -r artifact.zip /home/circleci/S3ContinuousDeploy
-            mkdir /root/project/artifact && cd /root/project/artifact && cp artifact.zip /root/project/artifact
+            mkdir /home/circleci/artifact && cd /home/circleci/artifact && cp artifact.zip /home/circleci/artifact
       - store_artifacts:
-          path: /root/project/artifact/artifact.zip
-          destination: /root/project/artifact  
+          path: /home/circleci/artifact/artifact.zip
+          destination: /home/circleci/artifact  
       - run:
           name: Deploy Over SSH
           command: |
