--- a/circle.yml
+++ b/circle.yml
@@ -31,8 +31,9 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
+            zip -r artifact.zip ~/tmp/S3ContinuousDeploy
             echo $CIRCLE_BUILD_NUM
-            cp /home/circleci/artifact /home/ubuntu
+            cp artifact.zip /home/ubuntu
             ssh ubuntu@54.204.70.36 BUILD_NO="$CIRCLE_BUILD_NUM" 
       #- run: 
           #sudo apt-get update && sudo apt-get install nginx -y    
