--- a/circle.yml
+++ b/circle.yml
@@ -29,11 +29,16 @@ jobs:
     steps:
       - checkout
       - run:
+          command: |
+            mkdir /home/circleci/artifact && cd /home/circleci/artifact
+            zip -r artifact.zip ~/tmp/S3ContinuousDeploy
+      - store_artifacts:
+          path: /home/circleci/artifact/artifact.zip
+          destination: /home/ubuntu
+      - run:
           name: Deploy Over SSH
           command: |
-            zip -r artifact.zip ~/tmp/S3ContinuousDeploy
             echo $CIRCLE_BUILD_NUM
-            #cp artifact.zip /home/ubuntu
             ssh ubuntu@54.204.70.36 BUILD_NO="$CIRCLE_BUILD_NUM" 
       #- run: 
           #sudo apt-get update && sudo apt-get install nginx -y    
