ec2 ssh command comment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,11 +36,11 @@ jobs:
       - store_artifacts:
           path: /home/circleci/artifact/artifact.zip
           destination: /home/ubuntu
-      - run:
-          name: Deploy Over SSH
-          command: |
-            echo $CIRCLE_BUILD_NUM
-            ssh ubuntu@54.204.70.36 BUILD_NO="$CIRCLE_BUILD_NUM" /bin/bash < "/home/circleci/tmp/scripts/deploy.sh" 
+      #- run:
+          #name: Deploy Over SSH
+          #command: |
+            #echo $CIRCLE_BUILD_NUM
+            #ssh ubuntu@54.204.70.36 BUILD_NO="$CIRCLE_BUILD_NUM" /bin/bash < "/home/circleci/tmp/scripts/deploy.sh" 
       #- run: 
           #sudo apt-get update && sudo apt-get install nginx -y    
       #- run: 
